Just let the HTTP impl compute the content-length for our POST data.  It does a better job of it.  Bug 246651, r=darin, sr=jst.